--- a/maindish-01.html
+++ b/maindish-01.html
@@ -242,10 +242,7 @@
                     
                     <div id="tabs3" class="col s12">
                         <div class="contents-tabs">
-                            <img src="images/blog2.jpg" alt="">
-                            <h4>Photography Sports</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, commodi, consequuntur. Mollitia voluptates cumque nemo possimus vitae explicabo labore itaque, laborum id quis molestias tenetur, in aspernatur provident quod eum!</p>
-                        </div>
+                            <img src="images/blog2.jpg" alt="">            </div>
                     </div>
                 </div>
             </div>
