--- a/maindish-01.html
+++ b/maindish-01.html
@@ -242,7 +242,7 @@
                     
                     <div id="tabs3" class="col s12">
                         <div class="contents-tabs">
-                            <img src="images/blog2.jpg" alt="">            </div>
+                                       </div>
                     </div>
                 </div>
             </div>
