--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="col s6">
 					<div class="content-center">
-						<a href="index.html"><h1><!--<i class="fas fa-utensils fa-spin aZnimated"></i>--><span> KITCHEN</span>NEAR-YOU</h1></a>
+						<a href="index.html"><h1><!--<i class="fas fa-utensils fa-spin aZnimated"></i>--><span>KITCHEN</span>NEAR-U</h1></a>
 					</div>
 				</div> 
 				<div class="col s3">
