--- a/index.htm
+++ b/index.htm
@@ -98,7 +98,7 @@
 		<div class="slide-show owl-carousel owl-theme">
 			<div class="slide-content">
 				<div class="mask"></div>
-				<img src="images/kit.png" alt="">
+				<img src="images/kit2.png" alt="">
 				<div class="caption text-center">
 					<h2>LORENZO FOOD</h2>
 					<p>DELICIOUS MEALS DELIVERY APP</p>
